# console-pgp-chat

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
pgp-chat/: Cargo.toml
pgp-chat-core/: Cargo.toml
pgp-chat-core/src/: error.rs  lib.rs  persistence.rs
pgp-chat-core/src/chat/: keystore.rs  message.rs  mod.rs  room.rs  transfer.rs  trust.rs
pgp-chat-core/src/crypto/: encrypt.rs  identity.rs  mod.rs  room_cipher.rs  sign.rs
pgp-chat-core/src/network/: behaviour.rs  event.rs  mod.rs  peer_discovery.rs  transport.rs  trust_message.rs
pgp-chat-core/src/terminal/: capability.rs  color.rs  mod.rs  renderer.rs
pgp-chat-demo/: Cargo.toml
pgp-chat-demo/src/: main.rs  menu.rs  ui.rs
pgp-chat-demo/src/commands/: crypto_demo.rs  mod.rs  network_demo.rs  terminal_demo.rs
pgp-chat/src/: background.rs  main.rs  menu.rs  sidebar.rs  ui.rs
pgp-chat/src/commands/: chat.rs  friends.rs  identity_manager.rs  mod.rs  network_demo.rs  peer_scanner.rs  room_manager.rs  settings.rs  trust_manager.rs
