[workspace]
members  = ["pgp-chat-core", "pgp-chat-demo"]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "MIT OR Apache-2.0"

# ---------------------------------------------------------------------------
# Shared dependency versions — all cross-platform (Windows / Linux / BSD)
# ---------------------------------------------------------------------------
[workspace.dependencies]

# Async runtime
tokio   = { version = "1",   features = ["full"] }
futures = "0.3"

# Terminal I/O — wraps Windows Console API *and* Unix termios transparently
crossterm = { version = "0.27", features = ["event-stream"] }

# PGP cryptography (rPGP — pure Rust, no native deps)
pgp      = { version = "0.13", default-features = false }
rand     = "0.8"
hex      = "0.4"
# smallvec is used by rPGP internally for preferred-algorithm lists
smallvec = { version = "1", features = ["serde"] }

# P2P networking — TCP + QUIC/UDP (no mDNS; mDNS is unreliable on Windows)
# QUIC traffic resembles TLS 1.3/HTTPS for protocol-level camouflage.
# Peer discovery via Kademlia DHT + Identify protocol instead of mDNS.
libp2p = { version = "0.54", default-features = false, features = [
    "tokio", "tcp", "quic", "noise", "yamux",
    "gossipsub", "kad", "identify",
    "ed25519", "serde", "macros",
] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow    = "1"

# Observability (writes to sink in TUI mode so the screen isn't corrupted)
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono  = { version = "0.4", features = ["serde"] }
uuid    = { version = "1",   features = ["v4", "serde"] }
zeroize = { version = "1",   features = ["derive"] }
