[package]
name    = "pgp-chat-demo"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description           = "Interactive demo binary exercising pgp-chat-core"

[[bin]]
name = "pgp-chat-demo"
path = "src/main.rs"

[dependencies]
pgp-chat-core = { path = "../pgp-chat-core" }

tokio.workspace              = true
futures.workspace            = true
crossterm.workspace          = true
serde_json.workspace         = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
chrono.workspace             = true
uuid.workspace               = true
libp2p.workspace             = true
pgp.workspace                = true
zeroize.workspace            = true
