[package]
name    = "pgp-chat"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description           = "Interactive binary for console-pgp-chat: menu-driven P2P encrypted chat"

[[bin]]
name = "pgp-chat"
path = "src/main.rs"

[dependencies]
pgp-chat-core = { path = "../pgp-chat-core" }

tokio.workspace              = true
futures.workspace            = true
crossterm.workspace          = true
serde_json.workspace         = true
anyhow.workspace             = true
tracing-subscriber.workspace = true
chrono.workspace             = true
uuid.workspace               = true
libp2p.workspace             = true
zeroize.workspace            = true
rand.workspace               = true
hex.workspace                = true
